<resources>
    <string name="app_name">MED NOW</string>
    <string name="searchTitle">Procurar</string>
    <string name="text_accounts">Todas as contas</string>
    <string name="hint_name">Nome</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Senha</string>
    <string name="hint_confirm_password">Confirme a senha</string>
    <string name="text_login">Login</string>
    <string name="text_register">Cadastrar</string>
    <string name="error_message_name">Digite seu nome completo</string>
    <string name="error_message_coren">Digite seu coren</string>
    <string name="error_message_email">Digite um email válido</string>
    <string name="error_message_age">Digite a idade</string>
    <string name="error_message_password">Digite a senha</string>
    <string name="success_message">Cadastro finalizado com sucesso!</string>
    <string name="text_not_member"><U>Cadastre-se</U></string>
    <string name="esqueceu_a_senha"><U>Esqueceu a senha?</U></string>
    <string name="error_valid_email_password2">Email inválido!</string>
    <string name="text_already_member">Já é um membro? Faça o login</string>
    <string name="error_email_exists">Email já existente</string>
    <string name="error_password_match">Senha não correspondente</string>
    <string name="error_valid_email_password">Email e/ou senha inválidos!</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Olá,</string>
    <string name="text_title">MED.NOW</string>
    <string name="tela_de_login">Tela de Login</string>
    <string name="please_enter_mobile_number">Por favor, insira seu numero de celular!</string>
    <string name="please_enter_valid_mobile_number">Por favor, insira um número válido!</string>
    <string name="tela_de_cadastro">Tela de Cadastro</string>
    <string name="med_now">MED NOW</string>
    <string name="text_helper">Obrigatório</string>
    <string name="hint_coren">Coren</string>
    <string name="n1">1</string>
</resources>