<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azul_claro"
    tools:context=".Enfermeiro.ActivityLogin">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="@drawable/background_triangulo_esquerdo"
        android:rotation="180" />


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/titleLabelTv"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/tela_de_login"
                android:textColor="#FDC830"
                android:textSize="40sp"
                android:textStyle="bold" />

            <!--PartedoEmail-->
            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/poppins_medium"
                android:text="Email:"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:helperText="@string/text_helper"
                app:helperTextTextColor="@color/LaranjaEscurodoApp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EditTextEmail"
                    style="@style/TamanhoLetracaixa"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/background_caixa"
                    android:fontFamily="@font/poppins_medium"
                    android:hint="Email:"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingStart="12dp"
                    android:paddingEnd="0dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--PartedaSenha-->
            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/poppins_medium"
                android:text="Senha:"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="16"
                app:counterTextColor="@color/cinzaclaro"
                app:helperText="@string/text_helper"
                app:helperTextTextColor="@color/LaranjaEscurodoApp"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EditTextPassword"
                    style="@style/TamanhoLetracaixa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_caixa"
                    android:fontFamily="@font/poppins_medium"
                    android:foregroundTint="#292626"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:maxLines="1"
                    android:paddingStart="12dp"
                    android:paddingEnd="0dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!--AvisodeCadastro-->
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewLinkRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="114dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/text_not_member"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <!--AvisodeEsqueceusenha-->
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewLinkEsqueceusenha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/esqueceu_a_senha"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ButtonLogin"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:background="@drawable/background_botao_roxo_rosa"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/text_login"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>