<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/azul_claro"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Enfermeiro.ActivityEnfermeiro">

    <!-- Parte do Login   -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleLabelTv"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/tela_de_cadastro"
            android:textColor="#FDC830"
            android:textSize="40sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_medium"
            android:text="Nome Completo:"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/background_caixa"
                android:fontFamily="@font/poppins_medium"
                android:foregroundTint="#1E1D1D"
                android:hint="@string/hint_name"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/black"
                style="@style/TamanhoLetracaixa"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/texttipoUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tipo Responsável:"
            android:textColor="@color/black"
            style="@style/TamanhoLetra"
            android:layout_marginTop="5dp"/>

        <Spinner
            android:id="@+id/spinnertipousuario"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/black"
            style="@style/Spinnerpersonalizado"
            />



        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppins_medium"
            android:text="Coren"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutCoren"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EditTextCoren"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/background_caixa"
                android:fontFamily="@font/poppins_medium"
                android:foregroundTint="#191717"
                android:hint="@string/hint_coren"
                android:maxLength="6"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="@color/black"
                style="@style/TamanhoLetracaixa"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppins_medium"
            android:text="Insira seu email:"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EditTextEmail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/background_caixa"
                android:fontFamily="@font/poppins_medium"
                android:foregroundTint="#191717"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/black"
                style="@style/TamanhoLetracaixa"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppins_medium"
            android:text="Insira uma senha:"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="16"
            app:counterTextColor="@color/black"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EditTextPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/background_caixa"
                android:fontFamily="@font/poppins_medium"
                android:foregroundTint="#1E1D1D"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLength="16"
                android:maxLines="1"
                android:textColor="@color/black"
                style="@style/TamanhoLetracaixa"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="2dp"
            android:fontFamily="@font/poppins_medium"
            android:text="Digite a senha novamente:"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="16"
            app:counterTextColor="@color/black"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/background_caixa"
                android:fontFamily="@font/poppins_medium"
                android:foregroundTint="#221F1F"
                android:hint="@string/hint_confirm_password"
                android:inputType="textPassword"
                android:maxLength="16"
                android:maxLines="1"
                android:textColor="@color/black"
                style="@style/TamanhoLetracaixa"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextViewLoginLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/text_already_member"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatButtonRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:textSize="20sp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginBottom="100dp"
            android:background="@drawable/background_botao_roxo_rosa"
            android:text="@string/text_register" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>